objects/ssot__ClinicalEncounter__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdmissionSource__c</fullName>
        <label>Admission Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterCategory__c</fullName>
        <label>Clinical Encounter Category</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterPriorityId__c</fullName>
        <label>Clinical Encounter Priority</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterServiceType__c</fullName>
        <label>Clinical Encounter Service Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterStatus__c</fullName>
        <label>Clinical Encounter Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterTypeId__c</fullName>
        <label>Clinical Encounter Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounter_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounter_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounter_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>ClinicalEncounter_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEnctrDchgDispositionId__c</fullName>
        <label>Clinical Enctr Dchg Disposition</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationFacilityId__c</fullName>
        <label>Destination Facility</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationLocationId__c</fullName>
        <label>Destination Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationOrganizationId__c</fullName>
        <label>Destination Organization</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DietPreference__c</fullName>
        <label>Diet Preference</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EncounterDurationNumber__c</fullName>
        <label>Encounter Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EncounterDurationUOMId__c</fullName>
        <label>Encounter Duration Unit of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityName__c</fullName>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityId__c</fullName>
        <label>Healthcare Facility</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Clinical Encounter Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreAdmissionIdentifierId__c</fullName>
        <label>Pre Admission Identifier</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousFacilityId__c</fullName>
        <label>Previous Facility</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousLocationId__c</fullName>
        <label>Previous Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousOrganizationId__c</fullName>
        <label>Previous Organization</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReadmissionCodeId__c</fullName>
        <label>Readmission Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedClinicalEncounterId__c</fullName>
        <label>Related Clinical Encounter</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAppointmentId__c</fullName>
        <label>Service Appointment</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpecialCourtesy__c</fullName>
        <label>Special Courtesy</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UnitOfMeasureId__c</fullName>
        <label>Unit Of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722182759_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounter_ClinicalEncounterP_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounter_ClinicalEncounterP_rel</relationshipLabel>
        <relationshipName>rel_1716722182759_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722185964_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounter_PreviousOrganizati_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounter_PreviousOrganizati_rel</relationshipLabel>
        <relationshipName>rel_1716722185964_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722187590_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounter_PreAdmissionIdenti_rel</label>
        <referenceTo>ssot__ClinicalEncounterIdentifier__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounter_PreAdmissionIdenti_rel</relationshipLabel>
        <relationshipName>rel_1716722187590_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>